--- a/index.html
+++ b/index.html
@@ -4,149 +4,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Kaynat 🎉</title>
-    <!-- Bootstrap -->
+    <title>Happy Birthday Kaynat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: 'Poppins', sans-serif;
-            overflow-x: hidden;
-            background: linear-gradient(to right, #ffdde1, #2c046e);
-            color: #fff;
-        }
-
-        p {
-            font-size: 20px;
-        }
-
-        /* Section style */
-        section {
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fad0c4);
+            background-size: 400% 400%;
+            animation: gradientBG 12s ease infinite;
+            overflow: hidden;
+            color: #fff;
+            font-family: 'Segoe UI', sans-serif;
             text-align: center;
-            padding: 40px;
-
         }
 
-        .hero {
-            background: linear-gradient(to right, #a409cf, #ee0979);
-            color: white;
+        @keyframes gradientBG {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
         }
 
         h1 {
-            font-size: 3rem;
-            animation: fadeIn 2s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-30px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .btn-custom {
-            margin-top: 20px;
-            background: #fff;
-            color: #ee0979;
+            font-size: 2.5rem;
             font-weight: bold;
-            border-radius: 25px;
-            padding: 10px 20px;
-            transition: 0.3s;
+            text-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
         }
 
-        .btn-custom:hover {
-            background: #ee0979;
-            color: #fff;
+        .wish {
+            font-size: 1.4rem;
+            margin-top: 15px;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 1s ease-in-out;
         }
 
-        .gallery img,
-        .gallery video {
-            max-width: 100%;
-            border-radius: 15px;
-            margin: 10px;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s;
+        .wish.show {
+            opacity: 1;
+            transform: translateY(0);
         }
 
-        .gallery img:hover,
-        .gallery video:hover {
-            transform: scale(1.05);
+        /* Floating hearts */
+        .heart {
+            position: absolute;
+            bottom: 0;
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 20px;
+            animation: floatUp 5s linear infinite;
+        }
+
+
+
+        @keyframes floatUp {
+            0% {
+                transform: translateY(0) scale(1);
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateY(-100vh) scale(1.5);
+                opacity: 0;
+            }
         }
     </style>
 </head>
 
 <body>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h2>since 17/08/2008</h2>
-        <h1>🎂 Happy Birthday Kaynat 🎂</h1>
-        <p class="lead">May your day be filled with love, laughter, and endless happiness 💖</p>
-        <button class="btn btn-custom" onclick="goToPast()">Take a Memory Ride</button>
-    </section>
+    <audio id="bgMusic" autoplay loop muted>
+    <source src="SpotiDownloader.com - Tum Jo Aaye - Pritam.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+</audio>
 
-    <!-- Past Memories Section -->
-    <section id="memories" style="display:none; background: linear-gradient(to right, #8360c3, #2ebf91);">
-        <h2>✨ Throwback to Beautiful Memories ✨</h2>
-        <p>Here are some of our most precious moments together 💕</p>
 
-        <div class="gallery d-flex flex-wrap justify-content-center">
-            <!-- Replace with your photos -->
-            <img src="img1.jpg" alt="Memory 1" width="300" height="400" class="object-fit-cover">
-            <img src="img2.jpg" alt="Memory 2" width="300" height="400" class="object-fit-cover">
-            <p>Happy Birthday, my dearest sister Kaynat!❤️❤️ You are not just my sister, you are my best friend, my
-                secret keeper, and my greatest blessing💖. </p><br><br>
-            <img src="img3.jpg" alt="Memory 3" width="300" height="400" class="object-fit-cover">
-            <img src="img4.jpg" alt="Memory 1" width="300" height="400" class="object-fit-cover">
-            <div>
-                <p>May Allah fill your life with endless happiness, love, and success.🎶 You deserve the best of
-                    everything today and always.</p>
-                <img src="img5.jpg" alt="Memory 2" width="300" height="400" class="object-fit-cover">
-                <img src="img6.jpg" alt="Memory 3" width="300" height="400" class="object-fit-cover">
-            </div>
+    <div class="container">
+        <h1>🎂 Happy Birthday Kaynat 💖</h1>
+        <p id="wish" class="wish"></p>
+        <div class="text-center my-5">
+            <a href="memorypage.html" target="_blank"> <button id="memoriesBtn" class="btn btn-danger btn-lg shadow">🎁
+                    Open </button></a>
         </div>
-        <button class="btn btn-custom" onclick="goToVideos()">let's Go</button>
-    </section>
+    </div>
 
-    <!-- Video Wishes Section -->
-    <section id="videos" style="display:none; background: linear-gradient(to right, #ff9966, #ff5e62);">
-        <h2>🎥 Wishes for You 🎥</h2>
-        <p>Scroll down to see heartfelt wishes 🎊</p>
-        <p>To my lovely sister Kaynat – on your special day, I just want you to know how precious you are to me. You
-            bring light into my life with your smile and warmth.</p>
-        <div class="gallery d-flex flex-wrap justify-content-center">
-            <!-- Replace with your videos -->
-            <video src="video1.mp4" controls width="300"></video>
-            <div>
-                <p>You make every moment brighter with your love and laughter. May this year bring you countless moments
-                    of joy and memories that last forever."</p>
-            </div>
-            <video src="video2.mp4" controls width="300"></video>
-        </div>
-    </section>
 
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        function goToPast() {
-            document.querySelector('.hero').style.display = 'none';
-            document.getElementById('memories').style.display = 'flex';
+        const wishes = [
+            "💫 On your special day, may Allah bless you with endless happiness and success!",
+            "💖 You are truly a gift to everyone around you, never stop shining.",
+            "🎉 Wishing you laughter, love, and unforgettable memories ahead.",
+            "🌹 Happy Birthday, Kaynat! You deserve nothing but the best."
+        ];
+
+        let index = 0;
+        const wishElement = document.getElementById("wish");
+
+        function showWish() {
+            wishElement.classList.remove("show");
+            setTimeout(() => {
+                wishElement.textContent = wishes[index];
+                wishElement.classList.add("show");
+                index = (index + 1) % wishes.length;
+            }, 500);
         }
 
-        function goToVideos() {
-            document.getElementById('memories').style.display = 'none';
-            document.getElementById('videos').style.display = 'flex';
+        showWish();
+        setInterval(showWish, 4000);
+
+        // Floating hearts
+        function createHeart() {
+            const heart = document.createElement("div");
+            heart.classList.add("heart");
+            heart.innerHTML = "❤";
+            heart.style.left = Math.random() * 100 + "vw";
+            heart.style.animationDuration = (3 + Math.random() * 2) + "s";
+            document.body.appendChild(heart);
+
+            setTimeout(() => {
+                heart.remove();
+            }, 5000);
         }
+
+        setInterval(createHeart, 500);
+
+        
+    window.addEventListener("click", function() {
+        let music = document.getElementById("bgMusic");
+        music.muted = false;
+        music.play();
+    });
+
+
+
     </script>
-
 </body>
 
 </html>
