--- a/memorypage.html
+++ b/memorypage.html
@@ -177,8 +177,34 @@
             }
         }
 
-        .videos video {
-            transform: rotateX('90deg');
+
+
+
+        button {
+            transform: translateY(120px);
+            margin-bottom: 100px;
+        }
+
+        .heart {
+            position: absolute;
+            bottom: 0;
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 20px;
+            animation: floatUp 5s linear infinite;
+        }
+
+
+
+        @keyframes floatUp {
+            0% {
+                transform: translateY(300vh) scale(1);
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateY(-300vh) scale(1.5);
+                opacity: 0;
+            }
         }
     </style>
 </head>
@@ -196,7 +222,7 @@
 
     <!-- Hidden Memories Section -->
     <section id="memories" class="container d-none">
-        <h2 class="text-center text-primary mb-4">🌸 Our Precious Memories 🌸</h2>
+        <h2 class="text-center text-primary my-4">🌸 Our Precious Memories 🌸</h2>
 
         <!-- Photo Gallery -->
         <div class="row g-3">
@@ -276,6 +302,8 @@
         </video>
 
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <script>
         // Show memories when button clicked
         document.getElementById("memoriesBtn").addEventListener("click", () => {
@@ -291,6 +319,30 @@
             // smooth scroll into view
             section.scrollIntoView({ behavior: "smooth" });
         });
+
+        // Floating hearts
+        function createHeart() {
+            const heart = document.createElement("div");
+            heart.classList.add("heart");
+            heart.innerHTML = "❤";
+            heart.style.left = Math.random() * 100 + "vw";
+            heart.style.animationDuration = (3 + Math.random() * 2) + "s";
+            document.body.appendChild(heart);
+
+            setTimeout(() => {
+                heart.remove();
+            }, 5000);
+        }
+
+        setInterval(createHeart, 1000);
+
+
+
+
+
+
+
+
     </script>
 </body>
 
