--- a/memorypage.html
+++ b/memorypage.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday Kaynat 🎉</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap"
+        rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -43,12 +47,16 @@
         .hero h1 {
             font-size: 3rem;
             animation: fadeInDown 2s;
+            animation-delay: 20s;
+            color: rgb(239, 239, 169);
         }
 
         .hero p {
             font-size: 1.3rem;
             margin-top: 10px;
             animation: fadeInUp 3s;
+            animation-delay: 20s;
+
         }
 
         /* Wishes Section */
@@ -62,6 +70,7 @@
         .wishes h2 {
             font-size: 2.2rem;
             margin-bottom: 30px;
+            color: rgb(239, 239, 169);
         }
 
         .wish {
@@ -181,7 +190,6 @@
 
 
         button {
-            transform: translateY(120px);
             margin-bottom: 100px;
         }
 
@@ -215,14 +223,31 @@
 
     <!--second part-->
 
+    <div class=" text-center m-5 p-3">
+        <center>
+            <p class="fs-3 fw-bold "
+                style=" font-family:Edu NSW ACT Cursive, cursive; text-shadow: 0px 0px 10px #1db027;">
+
+                May Allah bless
+                your life
+                with endless peace💕, barakah, and happiness.🤗 May your heart always remain content,
+                your soul strong💪, and your path filled with success and light. I pray that every step you take brings
+                you
+                closer to your dreams and to Jannah💌, and that both in this world and the Hereafter you are surrounded
+                with
+                love🫰, mercy, and blessings💖. Ameen.</p>
+            <p class="fs-1" style="text-shadow: 0px 0px 10px #2bbc37;">click below 👇</p>
+        </center>
+    </div>
+
     <!-- Memories Button -->
     <div class="text-center my-5">
-        <button id="memoriesBtn" class="btn btn-danger btn-lg shadow">🎁 Open Memories</button>
+        <button id="memoriesBtn" class="btn btn-success btn-lg shadow">🎁 Open Memories</button>
     </div>
 
     <!-- Hidden Memories Section -->
     <section id="memories" class="container d-none">
-        <h2 class="text-center text-primary my-4">🌸 Our Precious Memories 🌸</h2>
+        <h2 class="text-center text-success my-4">🌸 Our Precious Memories 🌸</h2>
 
         <!-- Photo Gallery -->
         <div class="row g-3">
@@ -270,7 +295,7 @@
 
     <!-- Wishes -->
     <section class="wishes">
-        <h2>Heartfelt Wishes 🌸</h2>
+        <h2>For My Girl 🌸</h2>
         <div class="wish">💌 "To my dearest sister Kaynat, you are my sunshine on dark days, my laughter in sadness, and
             my forever best friend."</div>
         <div class="wish">🌹 "On your special day, may all your dreams take flight, and may your life shine brighter
