--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My Own Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        html,body{
+            overflow-x:hidden ;
+        }
         body {
             margin: 0;
             height: 100vh;
