--- a/memorypage.html
+++ b/memorypage.html
@@ -11,16 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap"
         rel="stylesheet">
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Poppins", sans-serif;
-            background: linear-gradient(to top left, #f0f4ed, #bfd8c1, #4e7e5d) repeat;
-
-            color: #fff;
-            text-align: center;
-            overflow-x: hidden;
+          html,body{
+            overflow-x:hidden ;
         }
+       
 
         /* Animation for memories */
         .memory-item {
