--- a/memorypage.html
+++ b/memorypage.html
@@ -14,7 +14,20 @@
           html,body{
             overflow-x:hidden ;
         }
-       
+        body {
+            margin: 0;
+            
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(135deg, #f0f4ed, #bfd8c1, #4e7e5d);
+            animation: gradientBG 12s ease infinite;
+            color: #fff;
+            font-family: 'Segoe UI', sans-serif;
+            text-align: center;
+        }
+
 
         /* Animation for memories */
         .memory-item {
